--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,8 @@ pydantic>=2.8.0
 python-dotenv>=1.0.1
 langchain>=0.3.0
 langchain-google-genai>=2.0.0
+PyJWT>=2.8.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
+sqlalchemy>=2.0.0
+email-validator>=2.0.0
